Contex Removed, make it simpler, visible bug:0

--- a/src/components/alert/alert.scss
+++ b/src/components/alert/alert.scss
@@ -8,7 +8,6 @@
   inset: 0;
   background: rgba(91, 91, 92, 0.479);
   z-index: 20;
-  display: none;
 
   // Alert Box
   #alert-box {
